Fixed Mobile Browser Issues with Overflowing content

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@ a{
   text-decoration: none;
 }
 
+html,body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -241,7 +246,6 @@ h3.bio{
   width: 100%;
   margin: 12px 0px;
   position: relative;
-  white-space: nowrap;
 }
 
 .projects-grid > div {
